--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.16.1",
     "stylus": "^0.54.5",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "better-scroll": "^0.1.15"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
